--- a/app.json
+++ b/app.json
@@ -25,7 +25,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.aalvag.StreamingProject"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
